@@ -1,23 +1,16 @@
 TODO
-* Fix export when including a linked recipe.
 
 * Change from servings to yield
    Allow different kinds of yields, not just servings. This will let a
    recipe specify its yield in any logical way (loaves, cups,
    servings, etc)
-   
-* Fail elegantly when missing required modules for a plugin[X]
-* Make shopping list pluggable [X]
+
 * Implement menu-planner plugin 
    
 SEE http://grecipe-manager.wiki.sourceforge.net/TODO
 * Fix Batch Editor to work with plugin system
 
 * Finalize proper editor for nutrition values
-   
-* Implement a "browsing" interface [X]
-   Implement a browsing interface to browse through recipes by
-   category/cuisine/etc.
 
 * Add support for images/icons for categories/cuisines/sources/etc.
 
@@ -25,10 +18,23 @@ SEE http://grecipe-manager.wiki.sourceforge.net/TODO
    Add support for importing/exporting nutritional information into
    the gourmet XML fileformat import and export
 
+* Import GNOME Cookbook recipes 
+   
+* Fix export when including a linked recipe. [X]
+   Multiple export now automatically includes any linked
+   recipes. Individual export does not, because we can't expect
+   individual exporters to be able to handle multiple recipes by
+   default (for example, the single-web-page exporter doesn't handle
+   multiple recipes by default).
+
+* Fail elegantly when missing required modules for a plugin[X]
+* Make shopping list pluggable [X]
+* Implement a "browsing" interface [X]
+   Implement a browsing interface to browse through recipes by
+   category/cuisine/etc.
+
 * Add nutritional info to exports [X]
    Add nutritional info to exports optional support for writing
    nutritional information into export formats for display (PDF,
    print, html, etc)
-
-* Import GNOME Cookbook recipes 
    
