@@ -1306,6 +1306,23 @@ class RecData (Pluggable):
             else:
                 print 'Very odd: no match for',ing,'refid:',ing.refid
 
+    def include_linked_recipes (self, recs):
+        '''Handed a list of recipes, append any recipes that are
+        linked as ingredients in those recipes to the list.
+
+        Modifies the list in place.
+        '''
+        import sqlalchemy
+        ids = [r.id for r in recs]
+        extra_ings = self.ingredients_table.select(and_(
+                self.ingredients_table.c.refid,
+                self.ingredients_table.c.recipe_id.in_(ids)
+                )
+                                                  ).execute().fetchall()
+        for i in extra_ings:
+            if i.refid not in ids:
+                recs.append(self.get_referenced_rec(i))
+                
     def get_rec (self, id, recipe_table=None):
         """Handed an ID, return a recipe object."""
         if recipe_table:
